@@ -16,6 +16,8 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
    02111-1307 USA.  */
 
+/* Taken verbatim from Linux 2.4 (include/linux/personality.h).  */
+
 #ifndef _SYS_PERSONALITY_H
 #define _SYS_PERSONALITY_H 1
 
@@ -42,8 +44,7 @@ enum
     PER_LINUX_32BIT = 0x0000 | ADDR_LIMIT_32BIT,
     PER_SVR4 = 0x0001 | STICKY_TIMEOUTS | MMAP_PAGE_ZERO,
     PER_SVR3 = 0x0002 | STICKY_TIMEOUTS | SHORT_INODE,
-    PER_SCOSVR3 = 0x0003 | STICKY_TIMEOUTS |
-    WHOLE_SECONDS | SHORT_INODE,
+    PER_SCOSVR3 = 0x0003 | STICKY_TIMEOUTS | WHOLE_SECONDS | SHORT_INODE,
     PER_OSR5 = 0x0003 | STICKY_TIMEOUTS | WHOLE_SECONDS,
     PER_WYSEV386 = 0x0004 | STICKY_TIMEOUTS | SHORT_INODE,
     PER_ISCR4 = 0x0005 | STICKY_TIMEOUTS,
@@ -51,12 +52,14 @@ enum
     PER_SUNOS = 0x0006 | STICKY_TIMEOUTS,
     PER_XENIX = 0x0007 | STICKY_TIMEOUTS | SHORT_INODE,
     PER_LINUX32 = 0x0008,
-    PER_IRIX32 = 0x0009 | STICKY_TIMEOUTS,/* IRIX5 32-bit */
-    PER_IRIXN32 = 0x000a | STICKY_TIMEOUTS,/* IRIX6 new 32-bit */
-    PER_IRIX64 = 0x000b | STICKY_TIMEOUTS,/* IRIX6 64-bit */
+    PER_IRIX32 = 0x0009 | STICKY_TIMEOUTS,	/* IRIX5 32-bit */
+    PER_IRIXN32 = 0x000a | STICKY_TIMEOUTS,	/* IRIX6 new 32-bit */
+    PER_IRIX64 = 0x000b | STICKY_TIMEOUTS,	/* IRIX6 64-bit */
     PER_RISCOS = 0x000c,
     PER_SOLARIS = 0x000d | STICKY_TIMEOUTS,
     PER_UW7 = 0x000e | STICKY_TIMEOUTS | MMAP_PAGE_ZERO,
+    PER_HPUX = 0x000f,
+    PER_OSF4 = 0x0010,
     PER_MASK = 0x00ff,
   };
 
